k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchworth-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchworth-frontend
  template:
    metadata:
      labels:
        app: watchworth-frontend
    spec:
      containers:
        - name: watchworth-frontend
          image: cvsudeep/watchworthreact:latest
          # imagePullPolicy: Never
          ports:
            - containerPort: 8080
