k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchworth-frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "frontend.watchworth.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watchworth-frontend
                port:
                  number: 80
